--- a/sass/_screenonly.scss
+++ b/sass/_screenonly.scss
@@ -16,13 +16,15 @@
             margin-right: auto;
         }
 
-        > footer > div {
-            width: $medium-width;
-            margin-left: auto;
-            margin-right: auto;
+        > footer {
+            > div {
+                width: $medium-width;
+                margin-left: auto;
+                margin-right: auto;
 
-            .column {
-                @include span-columns(3);
+                .column {
+                    @include span-columns(3 of 12.1);
+                }
             }
         }
     }
